# notes

./: .gitignore  README.md
C++/: stackoverflow.md
C++/bug/: 上下文切换频繁.md
C++/code/collector/: MonitorBase.h  ThreadPool.h  TimeDb.h  main.cpp  monitor.h
C++/habit/: enum_num.md  scopeguard.md  static_in_headerfile.md
C++/imperfectC++/: CMakeLists.txt  conanfile.txt  conaninfo.txt  main.cpp
C++/imperfectC++/src/chapter1/: constraints.h  must_be_base.cpp  must_be_base.h  must_be_same_size.cpp  must_be_same_size.h  pod.cpp  pod.h
C++/project/: LogAgent遇到的问题.md
C++/project/scylladb_doc/: install.md  sstable_data_file.md
distributed/kafka/libkafka/: librdkafka使用心得.md
distributed/kafka/libkafka/code/: KafkaConsumer.cpp  KafkaConsumer.h  KafkaProducer.cpp  KafkaProducer.h
distributed/kafka/libkafka/code/Base/: KafkaBase.cpp  KafkaBase.h  Topic.cpp  Topic.h
distributed/kafka/libkafka/code/sender/: Sender.cpp  Sender.h
distributed/scylla/: scylla_config_注释版
distributed/scylla/scylladb_doc/: compact.md
plan_summary/2016-08-07/: 本周计划.md
容器化/docker/sysbench-mongo/: Dockerfile
总结/work/: 一个同事的教导.md  状态收集的问题.md
